[package]
name = "host"
version = "0.0.1"
authors = ["The Roc Contributors"]
license = "UPL-1.0"
edition = "2021"

links = "app"

[lib]
name = "host"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
roc_std = { path = "../../roc/crates/roc_std" }
libc = "0.2"
rayon = "1.6.1"
pixels = "0.11.0"
winit = "0.27"

[workspace]
